--- a/css/styles.css
+++ b/css/styles.css
@@ -321,16 +321,25 @@ img {
 }
 
 .team-soc-list-item {
+  width: 40px;
+  height: 40px;
 }
 
 .team-soc-link {
   position: relative;
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #4d5ae5;
   border-radius: 50%;
   width: 40px;
   height: 40px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-soc-link:hover,
+.team-soc-link:focus {
+  background-color: #404bbf;
 }
 
 .portfolio-text {
@@ -365,6 +374,7 @@ img {
 
 .portfolio-list-item {
   width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .overlay {
@@ -379,7 +389,7 @@ img {
   letter-spacing: 0.02em;
   color: #f4f4fd;
   background-color: #4d5ae5;
-  padding: 40px 32px 164px;
+  padding: 40px 32px;
   width: 100%;
   height: 100%;
   top: 0;
@@ -390,6 +400,11 @@ img {
 
 .portfolio-list-item:hover .portfolio-overlay-item {
   transform: translatey(0);
+}
+
+.portfolio-list-item:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-block {
@@ -441,7 +456,11 @@ img {
 
 .footer-blocks {
   display: flex;
-  gap: 120px;
+  align-items: baseline;
+}
+
+.footer-logo-block {
+  margin-right: 120px;
 }
 
 .footer-soc-block {
@@ -457,15 +476,19 @@ img {
 
 .footer-soc-link {
   position: relative;
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #4d5ae5;
   border-radius: 50%;
-  width: 40px;
-  height: 40px;
+  width: 100%;
+  height: 100%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-soc-list-item {
+  width: 40px;
+  height: 40px;
 }
 
 .footer-soc-icon {
@@ -477,6 +500,7 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-soc-link:hover {
+.footer-soc-link:hover,
+.footer-soc-link:focus {
   background-color: #31d0aa;
 }
